fix images being too big

--- a/src/pages/avalanche_terrain_maps.css
+++ b/src/pages/avalanche_terrain_maps.css
@@ -1,3 +1,4 @@
 .map_image {
     width: 98%;
+    max-width: calc(100vh);
 }
